<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#958888"
        android:padding="@dimen/_15sdp">

        <ImageView
            android:id="@+id/btnBackToLogin"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_back">

        </ImageView>

        <TextView
            android:id="@+id/sign_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/almendra"
            android:text="Đăng kí tài khoản"
            android:textColor="#EC8440"
            android:textSize="@dimen/_20sdp">

        </TextView>

        <RelativeLayout
            android:layout_marginTop="@dimen/_30sdp"
            android:id="@+id/ly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_acc"
           >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutEdtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:textColor="#000000"
                    android:id="@+id/edtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_username"
                    android:inputType="number"
                    app:counterEnabled="true">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutedtPassWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutEdtUserName"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:textColor="#000000"
                    android:id="@+id/edtPassWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_password"
                    android:inputType="textPassword">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutedtRepassWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutedtPassWord"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtRePassWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_pass"
                    android:inputType="textPassword">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutedtRepassWord">

                <com.google.android.material.textfield.TextInputEditText
                    android:textColor="#000000"
                    android:id="@+id/edtFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutAdress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutFullName">

                <com.google.android.material.textfield.TextInputEditText
                    android:textColor="#000000"
                    android:id="@+id/edtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/layoutCheckCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutAdress"
                android:layout_marginTop="@dimen/_10sdp"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/confirmcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_code"
                    android:textSize="@dimen/_13sdp"></TextView>

                <EditText
                    android:textColor="#000000"
                    android:id="@+id/edtConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"></EditText>
            </LinearLayout>
        </RelativeLayout>


        <Button

            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="#C81515"
            android:fontFamily="@font/almendra"
            android:text="Đăng kí"
            android:textColor="#fff"></Button>
    </RelativeLayout>
</layout>